 - enh: add `MetaCache` for persistent metadata management
 - enh: add `CKANAPI.hostname`
 - enh: sort search results by creation date instead of score and modified date
 - enh: convenience kwarg `since_time` for `search_dataset_via_api`
 - enh: implement `DBExtract.__repr__`
 - enh: remove unused "Sharing" page
 - enh: add icon for "Find Data"
 - ref: replace `user_list` with `user_autocomplete`
 - ref: replace `search_dataset` with `search_dataset_via_api`
   in `APIInterrogator`; `search_dataset` is now only free text search
 - ref: rename gui submodules for better overview
 - ref: move "My Data" panel into its own submodule
 - ref: implement `is_dc_resource_dict`
0.17.4
 - fix: correctly handle dataset IDs and names in `DBExtract`
 - fix: `get_datasets_user_shared` failed when many circles/collections exist
 - enh: improve "anonymous" GUI experience (no busy cursor, disable tabs)
 - enh: allow to disable update check on startup via settings
 - enh: apply button in upload settings only affects cache location
 - enh: move "apply" button in downloads settings next to "browse" button
 - ref: remove unnecessary custom signals for preferences dialog
 - ref: reorder and rename internal settings dialog methods
 - ref: decorate PyQtSlots
 - tests: restore previous users settings after testing
0.17.3
 - fix: drag'n'drop to DCscope broken since 0.17.0 (#88)
 - fix: show long resource names with elide-middle and tool tip (#89)
 - fix: error message dialog limited to traceback length of three
 - fix: copy error text to clipboard did not work in error message dialog
 - enh: allow specifying collections in upload task files and via the API
 - docs: increase warning threshold for max number of resources to 1000
   (CKAN 2.11.3 handles datasets with many resources much better)
0.17.2
 - fix: not all resource name edits were recognized in upload dialog (#84)
 - fix: check for existence of DC resources before starting uploads (#85)