@@ -13,6 +13,7 @@
  - enh: implement `DBExtract.__repr__`
  - enh: remove unused "Sharing" page
  - enh: add icon for "Find Data"
+ - enh: cache CKANAPI instance in GUI
  - ref: replace `user_list` with `user_autocomplete`
  - ref: replace `search_dataset` with `search_dataset_via_api`
    in `APIInterrogator`; `search_dataset` is now only free text search
